src/objects/Employee__c.object
<CustomObject>
    <description>Employee details</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address</description>
        <inlineHelpText>Address</inlineHelpText>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of Birth</description>
        <inlineHelpText>Date of Birth</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department of the employee</description>
        <inlineHelpText>Department of the employee</inlineHelpText>
        <label>Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <description>Designation of the employee</description>
        <inlineHelpText>Designation of the employee</inlineHelpText>
        <label>Designation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Name of the employee</description>
        <inlineHelpText>Name of the employee</inlineHelpText>
        <label>First_Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender</description>
        <inlineHelpText>Gender</inlineHelpText>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Don&apos;t want to disclose here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Displays last name of the employee</description>
        <inlineHelpText>Displays last name of the employee</inlineHelpText>
        <label>Last_Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <description>Marital Status</description>
        <inlineHelpText>Marital Status</inlineHelpText>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Don&apos;t want to disclose here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middel_Name__c</fullName>
        <description>Middle Name</description>
        <inlineHelpText>Middle Name</inlineHelpText>
        <label>Middel Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Mobile</description>
        <inlineHelpText>Mobile</inlineHelpText>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Previous_Employer__c</fullName>
        <description>Previous Employer</description>
        <inlineHelpText>Previous Employer</inlineHelpText>
        <label>Previous Employer</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutaion__c</fullName>
        <description>Salutaion</description>
        <inlineHelpText>Salutaion</inlineHelpText>
        <label>Salutaion</label>
        <picklist>
            <picklistValues>
                <fullName>Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dottore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Er.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M/s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senhorita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>years_of_experience__c</fullName>
        <description>years of experience</description>
        <inlineHelpText>years of experience</inlineHelpText>
        <label>years of experience</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Employee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>